--- a/vista_usuario/index.html
+++ b/vista_usuario/index.html
@@ -5,31 +5,114 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Juegos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <header class="container">
-
-    </header>
     <div class="container">
-        <aside>
-            <header>
-                <h1>logo</h1>
-            </header>
-            <nav class="navbar">
-                <ul>
-                    <li><button>Todos los juegos</button></li>
-                    <li><button>Play5</button></li>
-                    <li><button>Switch</button></li>
-                    <li><button>Microsoft</button></li>
-                    <li><button>Computador</button></button></li>
-                    <li><button>Carrito</button></button></li>
-                </ul>
-            </nav>
-            
-        </aside>
+        <div class="row">
+            <aside class="col-12 col-md-3">
+                <header class="container text-center">
+                    <h2>Logo</h2>
+                </header>
+                <nav class="navbar navbar-expand-md navbar-light">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navCollapse" aria-controls="navCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navCollapse" style="margin-top: 4.4px">
+                        <ul class="navbar-nav flex-column">
+                            <li class="nav-item">
+                                <button class="btn btn-light w-100 mb-2">Todos los juegos</button>
+                            </li>
+                            <li class="nav-item">
+                                <button class="btn btn-light w-100 mb-2">Play5</button>
+                            </li>
+                            <li class="nav-item">
+                                <button class="btn btn-light w-100 mb-2">Switch</button>
+                            </li>
+                            <li class="nav-item">
+                                <button class="btn btn-light w-100 mb-2">Microsoft</button>
+                            </li>
+                            <li class="nav-item">
+                                <button class="btn btn-light w-100 mb-2">Computador</button>
+                            </li>
+                            <li class="nav-item d-flex align-items-center">
+                                <a class="btn btn-light w-100 mb-2" href="carrito.html">Carrito</a>
+                                <span class="numero ms-2 mb-2">0</span>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </aside>
+            <main class="col-12 col-md-9">
+                <h2 class="fw-bold text-center">Todos los Videojuegos</h2>
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-3 mb-3">    
+                        <img class="card-img-top img-fluid" src="../img/play5.png" alt="Juego Play5">
+                        <div class="card-body text-center">
+                            <h3 class="card-title">Juego Play5</h3>
+                            <p class="card-text">Precio</p>
+                            <button class="btn btn-primary">Agregar</button>
+                        </div>
+                        <br>
+                        <img class="card-img-top img-fluid" src="../img/play5.png" alt="Juego Play5">
+                        <div class="card-body text-center">
+                            <h3 class="card-title">Juego Play5</h3>
+                            <p class="card-text">Precio</p>
+                            <button class="btn btn-primary">Agregar</button>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3 mb-3">
+                        <img class="card-img-top img-fluid" src="../img/switch1.png" alt="Juego Switch">
+                        <div class="card-body text-center">
+                            <h3 class="card-title">Juego Switch</h3>
+                            <p class="card-text">Precio</p>
+                            <button class="btn btn-primary">Agregar</button>
+                        </div>
+                        <br>
+                        <img class="card-img-top img-fluid" src="../img/switch1.png" alt="Juego Switch">
+                        <div class="card-body text-center">
+                            <h3 class="card-title">Juego Switch</h3>
+                            <p class="card-text">Precio</p>
+                            <button class="btn btn-primary">Agregar</button>
+                        </div>                  
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3 mb-3">
+                        <img class="card-img-top img-fluid" src="../img/pc1.png" alt="Juego PC">
+                        <div class="card-body text-center">
+                             <h3 class="card-title">Juego PC</h3>
+                            <p class="card-text">Precio</p>
+                             <button class="btn btn-primary">Agregar</button>
+                        </div> 
+                        <br>
+                        <img class="card-img-top img-fluid" src="../img/pc1.png" alt="Juego PC">
+                        <div class="card-body text-center">
+                             <h3 class="card-title">Juego PC</h3>
+                            <p class="card-text">Precio</p>
+                             <button class="btn btn-primary">Agregar</button>
+                             
+                        </div> 
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3 mb-3">
+                        <img class="card-img-top img-fluid" src="../img/xbox1.png" alt="Juego Xbox">
+                        <div class="card-body text-center">
+                            <h3 class="card-title">Juego Xbox</h3>
+                             <p class="card-text">Precio</p>
+                            <button class="btn btn-primary">Agregar</button>
+                        </div>
+                        <br>
+                        <img class="card-img-top img-fluid" src="../img/xbox1.png" alt="Juego Xbox">
+                        <div class="card-body text-center">
+                            <h3 class="card-title">Juego Xbox</h3>
+                             <p class="card-text">Precio</p>
+                            <button class="btn btn-primary">Agregar</button>
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </div>
     </div>
-    <footer>   
+    <footer class="container text-center">
+        <p class="fw-bold">© 2024 Nombre. Todos los derechos reservados.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
