cambiando imganes y personalizando estilo

--- a/vista_usuario/carrito.html
+++ b/vista_usuario/carrito.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <div class="container vh-100">
-        <div class="row vh-100">
+    <div class="container ">
+        <div class="row ">
             <aside class="col-12 col-md-3">
                 <header class="container text-center">
                     <h2>Logo</h2>
@@ -30,15 +30,89 @@
                     </div>
                 </nav>
             </aside>
-            <main class="col-12 col-md-9">
+            <main >
                 <h2 class="fw-bold text-center">Carrito</h2>
-                <div>
+              
                     <p class="fw-bold text-center">Tu carrito esta vacio</p>
-                    <div class="row">
-                        <p>asdadasdas</p>
+                    <div class="row text-center">
+                       <div class="col-2 d-flex justify-content-center align-items-center">
+                            <img class="img-fluid" src="../img/pc/pc1.png" alt="" width="100" >
+                       </div>
+                       <div class="col-2 d-flex justify-content-center align-items-center">
+                            <div>
+                                <small>Nombre</small>
+                                <h3>Juego 1</h3>
+                            </div>
+                       </div>
+                       <div class="col-2 d-flex justify-content-center align-items-center">
+                            <div>
+                                <small>Cantidad</small>
+                                <p>1</p>
+                            </div>
+                       </div>
+                       <div class="col-2 d-flex justify-content-center align-items-center">
+                            <div>
+                                <small>Precio</small>
+                                <p>$100</p>
+                            </div>
+                       </div>
+                       <div class="col-2 d-flex justify-content-center align-items-center">
+                            <div>
+                                <small>Subtotal</small>
+                                <p>$100</p>
+                            </div>
+                        </div>
+                       <div class="col-2 d-flex justify-content-center align-items-center ">
+                        <button class="btn btn-primary">Eliminar</button>
+                       </div>
+                    </div>
+                    <br>
+                    <div class="row text-center mb-4">
+                        <div class="col-2 d-flex justify-content-center align-items-center">
+                             <img class="img-fluid" src="../img/pc/pc2.png" alt="" width="100" >
+                        </div>
+                        <div class="col-2 d-flex justify-content-center align-items-center">
+                             <div>
+                                 <small>Nombre</small>
+                                 <h3>Juego 1</h3>
+                             </div>
+                        </div>
+                        <div class="col-2 d-flex justify-content-center align-items-center">
+                             <div>
+                                 <small>Cantidad</small>
+                                 <p>1</p>
+                             </div>
+                        </div>
+                        <div class="col-2 d-flex justify-content-center align-items-center">
+                             <div>
+                                 <small>Precio</small>
+                                 <p>$100</p>
+                             </div>
+                        </div>
+                        <div class="col-2 d-flex justify-content-center align-items-center">
+                             <div>
+                                 <small>Subtotal</small>
+                                 <p>$100</p>
+                             </div>
+                         </div>
+                        <div class="col-2 d-flex justify-content-center align-items-center ">
+                         <button class="btn btn-primary">Eliminar</button>
+                        </div>
+                    </div>
+                <div class="row text-center">
+                    <div class="col-2 align-items-center ">
+                        <button class="btn btn-primary">Vaciar Carrito</button>
+                    </div>
+                    <div class="col-5 align-items-center  text-end">
+                        <p>Total:</p>
+                        <p id="total">$100</p>
+                    </div>
+                    <div class="col-5 align-items-center  ">
+                        <button class="btn btn-primary">Comprar ahora</button>
                     </div>
                 </div>
             </main>
+            
         </div>
     </div>
     <footer class="container text-center">
