--- a/vista_usuario/index.html
+++ b/vista_usuario/index.html
@@ -15,13 +15,16 @@
                     <h2>Logo</h2>
                 </header>
                 <nav class="navbar navbar-expand-md navbar-light">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navCollapse" aria-controls="navCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navCollapse" aria-controls="navCollapse" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navCollapse" style="margin-top: 4.4px">
                         <ul class="navbar-nav flex-column">
                             <li class="nav-item">
-                                <button class="btn btn-light w-100 mb-2">Todos los juegos</button>
+                                <button class="btn btn-light w-100 mb-2">Logearse</button>
+                            </li>
+                            <li class="nav-item">
+                                <button class="btn btn-light w-100 mb-2">Juegos Destacados</button>
                             </li>
                             <li class="nav-item">
                                 <button class="btn btn-light w-100 mb-2">Play5</button>
@@ -43,64 +46,70 @@
                     </div>
                 </nav>
             </aside>
-            <main class="col-12 col-md-9">
-                <h2 class="fw-bold text-center">Todos los Videojuegos</h2>
-                <div class="row">
+            <main >
+                <h2 class="fw-bold text-center">Juegos Destacados</h2>
+                <div class="row mb-4">
                     <div class="col-12 col-md-6 col-lg-3 mb-3">    
-                        <img class="card-img-top img-fluid" src="../img/play5.png" alt="Juego Play5">
+                        <img class="card-img-top img-fluid" src="../img/play5/play51.png" alt="Juego Play5">
                         <div class="card-body text-center">
                             <h3 class="card-title">Juego Play5</h3>
                             <p class="card-text">Precio</p>
                             <button class="btn btn-primary">Agregar</button>
                         </div>
-                        <br>
-                        <img class="card-img-top img-fluid" src="../img/play5.png" alt="Juego Play5">
-                        <div class="card-body text-center">
-                            <h3 class="card-title">Juego Play5</h3>
-                            <p class="card-text">Precio</p>
-                            <button class="btn btn-primary">Agregar</button>
-                        </div>
+                        
                     </div>
                     <div class="col-12 col-md-6 col-lg-3 mb-3">
-                        <img class="card-img-top img-fluid" src="../img/switch1.png" alt="Juego Switch">
+                        <img class="card-img-top img-fluid" src="../img/switch/switch1.png" alt="Juego Switch">
                         <div class="card-body text-center">
                             <h3 class="card-title">Juego Switch</h3>
                             <p class="card-text">Precio</p>
                             <button class="btn btn-primary">Agregar</button>
-                        </div>
-                        <br>
-                        <img class="card-img-top img-fluid" src="../img/switch1.png" alt="Juego Switch">
-                        <div class="card-body text-center">
-                            <h3 class="card-title">Juego Switch</h3>
-                            <p class="card-text">Precio</p>
-                            <button class="btn btn-primary">Agregar</button>
-                        </div>                  
+                        </div>              
                     </div>
                     <div class="col-12 col-md-6 col-lg-3 mb-3">
-                        <img class="card-img-top img-fluid" src="../img/pc1.png" alt="Juego PC">
+                        <img class="card-img-top img-fluid" src="../img/pc/pc1.png" alt="Juego PC">
                         <div class="card-body text-center">
                              <h3 class="card-title">Juego PC</h3>
                             <p class="card-text">Precio</p>
                              <button class="btn btn-primary">Agregar</button>
                         </div> 
-                        <br>
-                        <img class="card-img-top img-fluid" src="../img/pc1.png" alt="Juego PC">
-                        <div class="card-body text-center">
-                             <h3 class="card-title">Juego PC</h3>
-                            <p class="card-text">Precio</p>
-                             <button class="btn btn-primary">Agregar</button>
-                             
-                        </div> 
                     </div>
                     <div class="col-12 col-md-6 col-lg-3 mb-3">
-                        <img class="card-img-top img-fluid" src="../img/xbox1.png" alt="Juego Xbox">
+                        <img class="card-img-top img-fluid" src="../img/xbox/xbox1.png" alt="Juego Xbox">
                         <div class="card-body text-center">
                             <h3 class="card-title">Juego Xbox</h3>
                              <p class="card-text">Precio</p>
                             <button class="btn btn-primary">Agregar</button>
                         </div>
-                        <br>
-                        <img class="card-img-top img-fluid" src="../img/xbox1.png" alt="Juego Xbox">
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <div class="col-12 col-md-6 col-lg-3 mb-3">    
+                        <img class="card-img-top img-fluid" src="../img/play5/play52.png" alt="Juego Play5">
+                        <div class="card-body text-center">
+                            <h3 class="card-title">Juego Play5</h3>
+                            <p class="card-text">Precio</p>
+                            <button class="btn btn-primary">Agregar</button>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3 mb-3">
+                        <img class="card-img-top img-fluid" src="../img/switch/switch2.png" alt="Juego Switch">
+                        <div class="card-body text-center">
+                            <h3 class="card-title">Juego Switch</h3>
+                            <p class="card-text">Precio</p>
+                            <button class="btn btn-primary">Agregar</button>
+                        </div>              
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3 mb-3">
+                        <img class="card-img-top img-fluid" src="../img/pc/pc2.png" alt="Juego PC">
+                        <div class="card-body text-center">
+                             <h3 class="card-title">Juego PC</h3>
+                            <p class="card-text">Precio</p>
+                             <button class="btn btn-primary">Agregar</button>
+                        </div> 
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3 mb-3">
+                        <img class="card-img-top img-fluid" src="../img/xbox/xbox2.png" alt="Juego Xbox">
                         <div class="card-body text-center">
                             <h3 class="card-title">Juego Xbox</h3>
                              <p class="card-text">Precio</p>
@@ -111,7 +120,7 @@
             </main>
         </div>
     </div>
-    <footer class="container text-center">
+    <footer >
         <p class="fw-bold">© 2024 Nombre. Todos los derechos reservados.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
