--- a/vista_usuario/index.html
+++ b/vista_usuario/index.html
@@ -36,7 +36,7 @@
                                 <button class="btn btn-light w-100 mb-2">Microsoft</button>
                             </li>
                             <li class="nav-item">
-                                <button class="btn btn-light w-100 mb-2">Computador</button>
+                                <button class="btn btn-light w-100 mb-2">PC</button>
                             </li>
                             <li class="nav-item d-flex align-items-center">
                                 <a class="btn btn-light w-100 mb-2" href="carrito.html">Carrito</a>
