traer todos con js

--- a/vista_usuario/carrito.html
+++ b/vista_usuario/carrito.html
@@ -30,11 +30,11 @@
                     </div>
                 </nav>
             </aside>
-            <main >
+            <main class="container" >
                 <h2 class="fw-bold text-center">Carrito</h2>
               
                     <p class="fw-bold text-center">Tu carrito esta vacio</p>
-                    <div class="row text-center">
+                    <div id="contenedor-juegos" class="row mb-4">
                        <div class="col-2 d-flex justify-content-center align-items-center">
                             <img class="img-fluid" src="../img/pc/pc1.png" alt="" width="100" >
                        </div>
