--- a/vista_usuario/index.html
+++ b/vista_usuario/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container" >
         <div class="row">
             <aside class="col-12 col-md-3">
                 <header class="container text-center">
@@ -24,19 +24,19 @@
                                 <button class="btn btn-light w-100 mb-2">Logearse</button>
                             </li>
                             <li class="nav-item">
-                                <button class="btn btn-light w-100 mb-2">Juegos Destacados</button>
+                                <button id="todos" class="btn btn-light w-100 mb-2" >Todos los juegos</button>
                             </li>
                             <li class="nav-item">
-                                <button class="btn btn-light w-100 mb-2">Play5</button>
+                                <button id="play5" class="btn btn-light w-100 mb-2">Play5</button>
                             </li>
                             <li class="nav-item">
-                                <button class="btn btn-light w-100 mb-2">Switch</button>
+                                <button id="switch" class="btn btn-light w-100 mb-2">Switch</button>
                             </li>
                             <li class="nav-item">
-                                <button class="btn btn-light w-100 mb-2">Microsoft</button>
+                                <button id="xbox" class="btn btn-light w-100 mb-2">Xbox</button>
                             </li>
                             <li class="nav-item">
-                                <button class="btn btn-light w-100 mb-2">PC</button>
+                                <button id="pc" class="btn btn-light w-100 mb-2">PC</button>
                             </li>
                             <li class="nav-item d-flex align-items-center">
                                 <a class="btn btn-light w-100 mb-2" href="carrito.html">Carrito</a>
@@ -46,76 +46,10 @@
                     </div>
                 </nav>
             </aside>
-            <main >
-                <h2 class="fw-bold text-center">Juegos Destacados</h2>
-                <div class="row mb-4">
-                    <div class="col-12 col-md-6 col-lg-3 mb-3">    
-                        <img class="card-img-top img-fluid" src="../img/play5/play51.png" alt="Juego Play5">
-                        <div class="card-body text-center">
-                            <h3 class="card-title">Juego Play5</h3>
-                            <p class="card-text">Precio</p>
-                            <button class="btn btn-primary">Agregar</button>
-                        </div>
-                        
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-3 mb-3">
-                        <img class="card-img-top img-fluid" src="../img/switch/switch1.png" alt="Juego Switch">
-                        <div class="card-body text-center">
-                            <h3 class="card-title">Juego Switch</h3>
-                            <p class="card-text">Precio</p>
-                            <button class="btn btn-primary">Agregar</button>
-                        </div>              
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-3 mb-3">
-                        <img class="card-img-top img-fluid" src="../img/pc/pc1.png" alt="Juego PC">
-                        <div class="card-body text-center">
-                             <h3 class="card-title">Juego PC</h3>
-                            <p class="card-text">Precio</p>
-                             <button class="btn btn-primary">Agregar</button>
-                        </div> 
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-3 mb-3">
-                        <img class="card-img-top img-fluid" src="../img/xbox/xbox1.png" alt="Juego Xbox">
-                        <div class="card-body text-center">
-                            <h3 class="card-title">Juego Xbox</h3>
-                             <p class="card-text">Precio</p>
-                            <button class="btn btn-primary">Agregar</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="row mb-4">
-                    <div class="col-12 col-md-6 col-lg-3 mb-3">    
-                        <img class="card-img-top img-fluid" src="../img/play5/play52.png" alt="Juego Play5">
-                        <div class="card-body text-center">
-                            <h3 class="card-title">Juego Play5</h3>
-                            <p class="card-text">Precio</p>
-                            <button class="btn btn-primary">Agregar</button>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-3 mb-3">
-                        <img class="card-img-top img-fluid" src="../img/switch/switch2.png" alt="Juego Switch">
-                        <div class="card-body text-center">
-                            <h3 class="card-title">Juego Switch</h3>
-                            <p class="card-text">Precio</p>
-                            <button class="btn btn-primary">Agregar</button>
-                        </div>              
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-3 mb-3">
-                        <img class="card-img-top img-fluid" src="../img/pc/pc2.png" alt="Juego PC">
-                        <div class="card-body text-center">
-                             <h3 class="card-title">Juego PC</h3>
-                            <p class="card-text">Precio</p>
-                             <button class="btn btn-primary">Agregar</button>
-                        </div> 
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-3 mb-3">
-                        <img class="card-img-top img-fluid" src="../img/xbox/xbox2.png" alt="Juego Xbox">
-                        <div class="card-body text-center">
-                            <h3 class="card-title">Juego Xbox</h3>
-                             <p class="card-text">Precio</p>
-                            <button class="btn btn-primary">Agregar</button>
-                        </div>
-                    </div>
+            <main class="container">
+                <h2 class="fw-bold text-center">Todos los Juegos</h2>
+                <div id="contenedor-juegos" class="row mb-4">
+                    <!-- Los juegos se añadirán aquí por JS-->
                 </div>
             </main>
         </div>
@@ -124,5 +58,6 @@
         <p class="fw-bold">© 2024 Nombre. Todos los derechos reservados.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="../js/app.js"></script>
 </body>
 </html>
