agregando funcionalidad botones

--- a/vista_usuario/index.html
+++ b/vista_usuario/index.html
@@ -21,25 +21,25 @@
                     <div class="collapse navbar-collapse" id="navCollapse" style="margin-top: 4.4px">
                         <ul class="navbar-nav flex-column">
                             <li class="nav-item">
-                                <button class="btn btn-light w-100 mb-2">Logearse</button>
+                                <button class="btn btn-light w-100 mb-2 ">Logearse</button>
                             </li>
                             <li class="nav-item">
-                                <button id="todos" class="btn btn-light w-100 mb-2" >Todos los juegos</button>
+                                <button id="todos" class="btn btn-light w-100 mb-2 boton-categoria" >Todos los juegos</button>
                             </li>
                             <li class="nav-item">
-                                <button id="play5" class="btn btn-light w-100 mb-2">Play5</button>
+                                <button id="play5" class="btn btn-light w-100 mb-2 boton-categoria">Play5</button>
+                            </li>
+                            <li class="nav-item"> 
+                                <button id="switch" class="btn btn-light w-100 mb-2 boton-categoria">Switch</button>
                             </li>
                             <li class="nav-item">
-                                <button id="switch" class="btn btn-light w-100 mb-2">Switch</button>
+                                <button id="xbox" class="btn btn-light w-100 mb-2 boton-categoria">Xbox</button>
                             </li>
                             <li class="nav-item">
-                                <button id="xbox" class="btn btn-light w-100 mb-2">Xbox</button>
-                            </li>
-                            <li class="nav-item">
-                                <button id="pc" class="btn btn-light w-100 mb-2">PC</button>
+                                <button id="pc" class="btn btn-light w-100 mb-2 boton-categoria">PC</button>
                             </li>
                             <li class="nav-item d-flex align-items-center">
-                                <a class="btn btn-light w-100 mb-2" href="carrito.html">Carrito</a>
+                                <a class="btn btn-light w-100 mb-2 boton-carrito" href="carrito.html">Carrito</a>
                                 <span class="numero ms-2 mb-2">0</span>
                             </li>
                         </ul>
@@ -47,7 +47,7 @@
                 </nav>
             </aside>
             <main class="container">
-                <h2 class="fw-bold text-center">Todos los Juegos</h2>
+                <h2 class="fw-bold text-center" id="titulo-principal">Todos los Juegos</h2>
                 <div id="contenedor-juegos" class="row mb-4">
                     <!-- Los juegos se añadirán aquí por JS-->
                 </div>
