--- a/vista_usuario/index.html
+++ b/vista_usuario/index.html
@@ -40,7 +40,7 @@
                             </li>
                             <li class="nav-item d-flex align-items-center">
                                 <a class="btn btn-light w-100 mb-2 boton-carrito" href="carrito.html">Carrito</a>
-                                <span class="numero ms-2 mb-2">0</span>
+                                <span id="numcarrito" class="numero ms-2 mb-2">0</span>
                             </li>
                         </ul>
                     </div>
