finalizacion funcionalidad carrito, inicio login

--- a/vista_usuario/carrito.html
+++ b/vista_usuario/carrito.html
@@ -15,7 +15,7 @@
                     <h2>Logo</h2>
                 </header>
                 <nav class="navbar navbar-expand-md navbar-light">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navCollapse" aria-controls="navCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navCollapse" aria-controls="navCollapse" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navCollapse" style="margin-top: 4.4px">
@@ -30,87 +30,25 @@
                     </div>
                 </nav>
             </aside>
-            <main class="container" >
-                <h2 class="fw-bold text-center">Carrito</h2>
-              
-                    <p class="fw-bold text-center">Tu carrito esta vacio</p>
-                    <div id="contenedor-juegos" class="row mb-4">
-                       <div class="col-2 d-flex justify-content-center align-items-center">
-                            <img class="img-fluid" src="../img/pc/pc1.png" alt="" width="100" >
-                       </div>
-                       <div class="col-2 d-flex justify-content-center align-items-center">
-                            <div>
-                                <small>Nombre</small>
-                                <h3>Juego 1</h3>
-                            </div>
-                       </div>
-                       <div class="col-2 d-flex justify-content-center align-items-center">
-                            <div>
-                                <small>Cantidad</small>
-                                <p>1</p>
-                            </div>
-                       </div>
-                       <div class="col-2 d-flex justify-content-center align-items-center">
-                            <div>
-                                <small>Precio</small>
-                                <p>$100</p>
-                            </div>
-                       </div>
-                       <div class="col-2 d-flex justify-content-center align-items-center">
-                            <div>
-                                <small>Subtotal</small>
-                                <p>$100</p>
-                            </div>
-                        </div>
-                       <div class="col-2 d-flex justify-content-center align-items-center ">
-                        <button class="btn btn-primary">Eliminar</button>
-                       </div>
+            <main class="container ">
+                <h2 class="fw-bold text-center fs-1">Carrito</h2>
+                <p id="carrito-vacio" class="fw-bold text-center fs-1">🛒 Tu carrito está vacío</p>
+                <div id="carrito-juegos" class="row mb-4">
+                    <!--Esto se va a completar con el js-->
+                </div>
+                <div id="carrito-acciones" class="row text-center">
+                    <div class="col-2 align-items-center">
+                        <button id="carrito-acciones-vaciar" class="btn btn-primary">Vaciar Carrito</button>
                     </div>
-                    <br>
-                    <div class="row text-center mb-4">
-                        <div class="col-2 d-flex justify-content-center align-items-center">
-                             <img class="img-fluid" src="../img/pc/pc2.png" alt="" width="100" >
-                        </div>
-                        <div class="col-2 d-flex justify-content-center align-items-center">
-                             <div>
-                                 <small>Nombre</small>
-                                 <h3>Juego 1</h3>
-                             </div>
-                        </div>
-                        <div class="col-2 d-flex justify-content-center align-items-center">
-                             <div>
-                                 <small>Cantidad</small>
-                                 <p>1</p>
-                             </div>
-                        </div>
-                        <div class="col-2 d-flex justify-content-center align-items-center">
-                             <div>
-                                 <small>Precio</small>
-                                 <p>$100</p>
-                             </div>
-                        </div>
-                        <div class="col-2 d-flex justify-content-center align-items-center">
-                             <div>
-                                 <small>Subtotal</small>
-                                 <p>$100</p>
-                             </div>
-                         </div>
-                        <div class="col-2 d-flex justify-content-center align-items-center ">
-                         <button class="btn btn-primary">Eliminar</button>
-                        </div>
+                    <div class="col-5 align-items-center text-end">
+                        <p class="fw-bold">Total:</p>
+                        <p id="total" class="fw-bold">$100</p>
                     </div>
-                <div class="row text-center">
-                    <div class="col-2 align-items-center ">
-                        <button class="btn btn-primary">Vaciar Carrito</button>
-                    </div>
-                    <div class="col-5 align-items-center  text-end">
-                        <p>Total:</p>
-                        <p id="total">$100</p>
-                    </div>
-                    <div class="col-5 align-items-center  ">
-                        <button class="btn btn-primary">Comprar ahora</button>
+                    <div class="col-5 align-items-center">
+                        <button id="carrito-acciones-comprar" class="btn btn-primary">Comprar ahora</button>
                     </div>
                 </div>
+                <p id="carrito-comprado" class="text-center fs-1 mt-5 ">Muchas gracias por su compra</p>
             </main>
             
         </div>
@@ -119,5 +57,6 @@
         <p class="fw-bold">© 2024 Nombre. Todos los derechos reservados.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="../js/carrito.js"></script>
 </body>
 </html>
