Creacion paginas faltantes

--- a/vista_usuario/index.html
+++ b/vista_usuario/index.html
@@ -21,7 +21,7 @@
                     <div class="collapse navbar-collapse" id="navCollapse" style="margin-top: 4.4px">
                         <ul class="navbar-nav flex-column">
                             <li class="nav-item">
-                                <button class="btn btn-light w-100 mb-2 ">Logearse</button>
+                                <button id="btn-login" class="btn btn-light w-100 mb-2 " >Logearse</button>
                             </li>
                             <li class="nav-item">
                                 <button id="todos" class="btn btn-light w-100 mb-2 boton-categoria" >Todos los juegos</button>
@@ -46,7 +46,7 @@
                     </div>
                 </nav>
             </aside>
-            <main class="container">
+            <main class="container-sm">
                 <h2 class="fw-bold text-center" id="titulo-principal">Todos los Juegos</h2>
                 <div id="contenedor-juegos" class="row mb-4">
                     <!-- Los juegos se añadirán aquí por JS-->
