--- a/vista_usuario/login.html
+++ b/vista_usuario/login.html
@@ -30,7 +30,9 @@
             <a  href="./registro.html">Registrarse</a>
         </div>
     </div>
-    
+    <footer >
+        <p class="fw-bold">© 2024 Nombre. Todos los derechos reservados.</p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
