agregando localStorage y manejo de sesiones

--- a/vista_usuario/index.html
+++ b/vista_usuario/index.html
@@ -21,7 +21,9 @@
                     <div class="collapse navbar-collapse" id="navCollapse" style="margin-top: 4.4px">
                         <ul class="navbar-nav flex-column">
                             <li class="nav-item">
-                                <button id="btn-login" class="btn btn-light w-100 mb-2 " >Logearse</button>
+                                <button id="btn-login" class="btn btn-light w-100 mb-2">Logearse</button>
+                                <button id="btn-perfil" class="btn btn-light w-100 mb-2 d-none">Mi perfil</button>
+                                <button id="btn-logout" class="btn btn-light w-100 mb-2 d-none">Cerrar sesión</button>
                             </li>
                             <li class="nav-item">
                                 <button id="todos" class="btn btn-light w-100 mb-2 boton-categoria" >Todos los juegos</button>
