--- a/vista_usuario/login.html
+++ b/vista_usuario/login.html
@@ -13,12 +13,12 @@
         <h1 class="text-center mb-4">Iniciar sesión</h1>
         <form>
             <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Correo electrónico</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingresa tu correo electrónico">
+                <label for="usuarioEmail" class="form-label">Correo electrónico</label>
+                <input type="email" class="form-control" id="usuarioEmail" aria-describedby="emailHelp" placeholder="Ingresa tu correo electrónico">
             </div>
             <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Ingresa tu contraseña">
+                <label for="usuarioPassword" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="usuarioPassword" placeholder="Ingresa tu contraseña">
             </div>
             <div class="mb-3 text-center">
                 <a  href="./recuperacion_contraseña.html">Olvidaste tu contraseña</a>
@@ -34,5 +34,6 @@
         <p class="fw-bold">© 2024 Nombre. Todos los derechos reservados.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="../js/login.js"></script>
 </body>
 </html>
