--- a/vista_usuario/registro.html
+++ b/vista_usuario/registro.html
@@ -12,43 +12,43 @@
     <div class="container custom-container" >
       <div class="row">
         <div class="col">
-          <h2 class="text-center display-4 text-dark" >Registrate</h2>
+          <h3 class="text-center display-4 text-dark" >Registrate</h3>
           <!---Registro-->
           <form action="#" id="formulario">
             <div class="mb-3">
               <label for="nombre-completo" class="form-label">Nombre Completo</label>
               <input type="text" class="form-control" id="nombre-completo" name="nombre-completo" placeholder="Ingresa tu Nombre Completo">
-              <div id="error-nombre-completo" class="error-message fw-bold"></div>
+              <div id="error-nombre-completo" class="error-message fw-bold text-danger"></div>
             </div>
             <div class="mb-3">
               <label for="usuario" class="form-label ">Nombre de Usuario</label>
               <input type="text" class="form-control" id="usuario" name="nombre-usuario" placeholder="Ingresa tu Nombre de Usuario">
-              <div id="error-usuario" class="error-message fw-bold"></div>
+              <div id="error-usuario" class="error-message fw-bold text-danger"></div>
             </div>
             <div class="mb-3">
               <label for="email" class="form-label ">Correo electrónico</label>
               <input type="email" class="form-control" id="email" name="email" placeholder="Ingresa tu Email">
-              <div id="error-email" class="error-message fw-bold"></div>
+              <div id="error-email" class="error-message fw-bold text-danger"></div>
             </div>
             <div class="mb-3">
               <label for="fecha-nacimiento" class="form-label ">fecha de nacimiento</label>
               <input type="date" class="form-control" id="fecha-nacimiento" name="fecha-nacimiento">
-              <div id="error-fecha-nacimiento" class="error-message "></div>
+              <div id="error-fecha-nacimiento" class="error-message fw-bold text-danger"></div>
             </div>
             <div class="mb-3">
               <label for="direccion" class="form-label ">Dirección</label>
               <input type="text" class="form-control" id="direccion-despacho" name="direccion-despacho" placeholder="Ingresa tu Dirección">
-              <div id="error-direccion-despacho" class="error-message "></div>
+              <div id="error-direccion-despacho" class="error-message fw-bold text-danger"></div>
             </div>
             <div class="mb-3">
               <label for="password" class="form-label ">Contraseña</label>
               <input type="password" class="form-control" id="password" name="password" placeholder="Ingresa tu Contraseña">
-              <div id="error-password" class="error-message "></div>
+              <div id="error-password" class="error-message fw-bold text-danger"></div>
             </div>
             <div class="mb-3">
               <label for="confirm-password" class="form-label ">Confirmar Contraseña</label>
               <input type="password" class="form-control" id="confirm-password" name="confirm-password" placeholder="Confirma tu Contraseña">
-              <div id="error-confirm-password" class="error-message fw-bold"></div>
+              <div id="error-confirm-password" class="error-message fw-bold text-danger"></div>
           </div>
             <div class="mb-3 d-inline-block ">
               <button type="submit" class="btn btn-primary">Registrate</button>
@@ -65,5 +65,6 @@
         <p class="fw-bold">© 2024 Nombre. Todos los derechos reservados.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="../js/registro.js"></script>
   </body>
 </html>
