--- a/vista_usuario/admin.html
+++ b/vista_usuario/admin.html
@@ -3,41 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin</title>
+    <title>Panel de Administración</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <header class="container">
-        <nav class="navbar navbar-expand-md navbar-light">
-            <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navCollapse" aria-controls="navCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navCollapse" style="margin-top: 4.4px">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    
-                    <li class="nav-item">
-                        <button id="btn-logout" class="btn btn-light w-100 mb-2 d-none">Cerrar sesión</button>
-                    </li>
-                 
-                </ul>
-            </div>
-        </nav>
-    </header>
-    <div class="container" >
-        <div class="row">
-            <main class="container-sm">
-                <h2 class="fw-bold text-center" id="titulo-principal">Todos los Juegos</h2>
-                <div id="contenedor-juegos" class="row mb-4">
-                    <!-- Los juegos se añadirán aquí por JS-->
-                </div>
-            </main>
+    <div class="container">
+        <h1 class="text-center mt-5 text-white fw-bold ">Panel de Administración</h1>
+        <div class="table-responsive mt-5">
+            <table class="table table-bordered table-striped">
+                <thead>
+                    <tr>
+                        <th>Nombre Completo</th>
+                        <th>Nombre Usuario</th>
+                        <th>Email</th>
+                        <th>direccion</th>
+                        <th>Fecha Nacimiento</th>
+                        <th>Password</th>
+                    </tr>
+                </thead>
+                <tbody id="tabla-usuarios">
+                    <!-- Aquí se cargarán los usuarios mediante JavaScript -->
+                </tbody>
+            </table>
         </div>
     </div>
     <footer >
-        <p class="fw-bold">© 2024 Nombre. Todos los derechos reservados.</p>
+        <p class="fw-bold">© 2024 XYZGaming. Todos los derechos reservados.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../js/app.js"></script>
+    <script src="../js/admin.js"></script>
+
 </body>
 </html>
