--- a/vista_usuario/carrito.html
+++ b/vista_usuario/carrito.html
@@ -12,7 +12,7 @@
         <div class="row ">
             <aside class="col-12 col-md-3">
                 <header class="container text-center">
-                    <h2>Logo</h2>
+                    <h2 class="Logo align-self-start text-start fw-bold">XYZGaming</h2>
                 </header>
                 <nav class="navbar navbar-expand-md navbar-light">
                     <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navCollapse" aria-controls="navCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,11 +40,11 @@
                     <div class="col-2 align-items-center">
                         <button id="carrito-acciones-vaciar" class="btn btn-primary">Vaciar Carrito</button>
                     </div>
-                    <div class="col-5 align-items-center text-end">
-                        <p class="fw-bold">Total:</p>
-                        <p id="total" class="fw-bold">$100</p>
+                    <div class="col-7  d-flex justify-content-end align-items-center ">
+                        <p class="fw-bold fs-4">Total: </p>
+                        <p id="total" class="fw-bold fs-4">$100</p>
                     </div>
-                    <div class="col-5 align-items-center">
+                    <div class="col-3 align-items-center">
                         <button id="carrito-acciones-comprar" class="btn btn-primary">Comprar ahora</button>
                     </div>
                 </div>
@@ -54,7 +54,7 @@
         </div>
     </div>
     <footer class="container text-center">
-        <p class="fw-bold">© 2024 Nombre. Todos los derechos reservados.</p>
+        <p class="fw-bold">© 2024 XYZGaming. Todos los derechos reservados.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="../js/carrito.js"></script>
