--- a/vista_usuario/index.html
+++ b/vista_usuario/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <div class="container" >
+    <div class="container " >
         <div class="row">
-            <aside class="col-12 col-md-3">
+            <aside class="col-12 col-md-3 ">
                 <header class="container text-center">
-                    <h2>Logo</h2>
+                    <h2 class="Logo align-self-start text-start fw-bold">XYZGaming</h2>
                 </header>
                 <nav class="navbar navbar-expand-md navbar-light">
                     <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navCollapse" aria-controls="navCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,13 +42,13 @@
                             </li>
                             <li class="nav-item d-flex align-items-center">
                                 <a class="btn btn-light w-100 mb-2 boton-carrito" href="carrito.html">Carrito</a>
-                                <span id="numcarrito" class="numero ms-2 mb-2">0</span>
+                                <span id="numcarrito" class="numero ms-2 mb-2 badge bg-white text-dark fs-6">0</span>
                             </li>
                         </ul>
                     </div>
                 </nav>
             </aside>
-            <main class="container-sm">
+            <main class="container" >
                 <h2 class="fw-bold text-center" id="titulo-principal">Todos los Juegos</h2>
                 <div id="contenedor-juegos" class="row mb-4">
                     <!-- Los juegos se añadirán aquí por JS-->
@@ -57,7 +57,7 @@
         </div>
     </div>
     <footer >
-        <p class="fw-bold">© 2024 Nombre. Todos los derechos reservados.</p>
+        <p class="fw-bold">© 2024 XYZGaming. Todos los derechos reservados.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="../js/app.js"></script>
