--- a/vista_usuario/perfil.html
+++ b/vista_usuario/perfil.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -45,9 +46,10 @@
        
     </div>
     <footer >
-        <p class="fw-bold">© 2024 Nombre. Todos los derechos reservados.</p>
+        <p class="fw-bold">© 2024 XYZGaming. Todos los derechos reservados.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="../js/perfil.js"></script>
 </body>
 </html>
+
